# Robotica_exs

./: README.md
Exercise5/config/: rqt_multiplot.xml
Exercise5/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Exercise5/src/fanuc_description/: CMakeLists.txt  package.xml
Exercise5/src/fanuc_move_group_interface/: CMakeLists.txt  package.xml
Exercise5/src/fanuc_moveit_config/: .setup_assistant  package.xml
ex2_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ex2_ws/logs/ex2_pkg/: build.make.000.log.stderr
ex2_ws/src/ex2_pkg/: CMakeLists.txt  package.xml
ex2_ws/src/ex2_pkg_msgs/: CMakeLists.txt  package.xml
fanuc_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
fanuc_ws/logs/fanuc_description/: build.make.019.log.stderr  build.make.023.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr
fanuc_ws/logs/kinematics_action/: build.check.004.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  (+5 more)
fanuc_ws/src/fanuc_description/: CMakeLists.txt  package.xml
fanuc_ws/src/fanuc_description/launch/: ex4_fk.launch
fanuc_ws/src/fanuc_description/nodes/: allToFlange.cpp
fanuc_ws/src/fanuc_description/robot/: fanuc.urdf  fanuc_no_limit.urdf
fanuc_ws/src/fanuc_description/services/: fk_client.cpp  fk_server.cpp
(+358 files in other folders)
